Updated to be better on smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <html>
 <head>
     <title>Crazy Bomb Online</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+
     <div>
-        <br />
-        <br />
-        <label for="min">
-            Min:
-            <input id="min" type="text" value="10" />
-        </label>
-        <br />
-        <label for="max">
-            Max:
-            <input id="max" type="text" value="120" />
-        </label>
-        <br />
-        <button id="startButton" onclick="start()">Start!</button>
+        <div>
+            <label for="min">
+                Min:
+                <input id="min" type="text" value="10" type="number" />
+            </label>
+        </div>
+        <div>
+            <label for="max">
+                Max:
+                <input id="max" type="text" value="90" type="number" />
+            </label>
+        </div>
+        
+        <button class="startButton" id="startButton" onclick="start()">Start!</button>
     </div>
 
 </body>
