--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Crazy Bomb Online</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
