Added task and cards

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
     <title>Crazy Bomb Online</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -22,6 +24,8 @@
             </label>
         </div>
         
+        <div id="taskDiv"></div>
+        <div id="wordDiv"></div>
         <button class="startButton" id="startButton" onclick="start()">Start!</button>
     </div>
 
